force-app/main/default/objects/TT_Feature__c/TT_Feature__c.object-meta.xml
<CustomObject>
    <label>TT Feature</label>
    <nameField>
        <displayFormat>Feature-{000}</displayFormat>
        <label>TT Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TT Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>