force-app/main/default/objects/TT_Feature__c/fields/Definition_of_Done__c.field-meta.xml
<CustomField>
    <fullName>Definition_of_Done__c</fullName>
    <description>The conditions that must be met for this Feature to be considered complete and ready for release</description>
    <inlineHelpText>The conditions that must be met for this Feature to be considered complete and ready for release</inlineHelpText>
    <label>Definition of Done</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>