force-app/main/default/objects/TT_Feature__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>Full information about the feature including requirements in a rich text format</description>
    <inlineHelpText>Full information about the feature including requirements in a rich text format</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>