force-app/main/default/objects/TT_Feature__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <description>T-shirt / point estimate for Feature</description>
    <inlineHelpText>T-shirt / point estimate for Feature</inlineHelpText>
    <label>Story Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>