force-app/main/default/objects/TT_Feature__c/fields/TT_Initiative__c.field-meta.xml
<CustomField>
    <fullName>TT_Initiative__c</fullName>
    <label>TT Initiative</label>
    <referenceTo>TT_Initiative__c</referenceTo>
    <relationshipLabel>TT Features</relationshipLabel>
    <relationshipName>TT_Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>