force-app/main/default/objects/TT_Feature__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Related Initiative&apos;s type</description>
    <formula>TEXT(TT_Initiative__r.Type__c)</formula>
    <inlineHelpText>Related Initiative&apos;s type</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>