force-app/main/default/objects/TT_Feature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TT_Initiative__c</columns>
    <columns>NAME</columns>
    <columns>Feature_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>